test/pass/io/close_file_twice.lly
var f = file::open("io_test_file.txt", "w")

f.close()
f.close()
